rearrange CSS Grid & Header Stretch Bug

--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,9 @@
   display: grid;
     gap: 5vw;
     grid-template-areas: 
-    "image heading"
-    "image text";
+    "image image image"
+    "heading text text";
+  align-items: center;
   border: 1px solid blue;
   padding: 5vw;
   width: 85vw;
@@ -12,16 +13,19 @@
 
 img {
   grid-area: image;
-  /* max-width: 60vw; */
-  height: auto;
   width: 100%;
+  max-height: 100px;
+  overflow-clip-margin: 50px;
   margin: auto;
 }
 
 .text {
   grid-area: text;
+  text-align: justify;
+  text-align-last: center;
 }
 
 .heading {
   grid-area: heading;
+  text-align: center;
 }
